k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: default
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
